--- a/Lab02_Page1.html
+++ b/Lab02_Page1.html
@@ -5,40 +5,45 @@
             body {background-color: pink;
             font-family: Arial, Helvetica, sans-serif;}
 
-            .input-container { margin-bottom: 15px;}
+            .input-container {
+                margin-bottom: 15px;}
 
             label { font-size: 18px; font-weight: bold;}
 
-            .input-container input { 
-                width: 100%;
-                padding: 8px;
+            .input-container input {
+                width: 30%;
+                padding: 10px;
                 margin-top: 5px;
-                border: 1px solid;
-                border-radius: 5px;}
+                border: 1px solid #ccc;
+                border-radius: 5px;
+                font-size: 16px; }
 
-            .button {
-                background-color: green;
+            button[type="submit"] {
+                background-color: green; 
                 color: white;
-                border:black;
+                border: none;
+                padding: 12px 20px;
                 text-align: center;
                 font-size: 16px;
-                border-radius: 8px; 
+                border-radius: 8px;
+                cursor: pointer;
                 margin-top: 10px; }
 
-            .button:hover { background-color: darkgreen;}
+            
+            button[type="submit"]:hover { background-color: darkgreen;}
         </style>
     </head>
     <body>
-        <h1>Leave your information to contact me</h1>
-        <form action="page2.html" method="post">
-            <div> class= "input-container">
+        <h1>Leave your Information Below to Contact Me</h1>
+        <form action="Lab02_Page2.html" method="get"> 
+            <div class="input-container"> 
                 <label for="fname">First Name:</label>
-                <input type="text" id="fname" name="fname"><br><br> 
+                <input type="text" id="fname" name="fname" required> 
             </div>
 
-            <div> class="input-container">
+            <div class="input-container">
                 <label for="lname">Last Name:</label>
-                <input type="text" id="lname" name="lname"><br><br>
+                <input type="text" id="lname" name="lname" required>
             </div>
 
             <button type="submit">Submit</button>
@@ -47,3 +52,4 @@
         <p>Click the Submit button and I'll get back to you shortly</p>
     </body>
 </html>
+ 
